tools/k8s/dev/api/api.k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fullstack-api
  labels:
    component: fullstack-api
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      component: fullstack-api
      tier: backend
  template:
    metadata:
      labels:
        component: fullstack-api
        tier: backend
    spec:
      containers:
        - name: fullstack-api
          image: fullstack-api.dev
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
